--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div>하이요</div>
     <p id="show"></p>
 
     <script>
-      document.querySelector("#show").innerHTML = 10 + 20;
-      document.write(10 + 50);
-      alert("방가요 ");
-      console.log(98 + 872);
-      /* console.log()는 브라우저 콘솔에 데이터 값을 출력합니다. */
-      console.log(9 + 22); // 31은 출력됨.
-      // console.log // 100은 출력되지 않음
+      document.write("안녕!");
     </script>
   </body>
 </html>
